# shpell

./: AGENTS.md  Cargo.toml  LICENSE  README.md  README.zh.md  flake.nix
.github/workflows/: ci.yml
docs/: design.md
src/: auth.rs  compose.rs  config.rs  main.rs
src/provider/: mod.rs  openai_chatgpt.rs
src/shell/: mod.rs  shpell.bash  shpell.zsh  x.zsh
