[package]
name = "x"
version = "0.1.0"
edition = "2021"
description = "Write shell commands in natural language"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
dirs = "5"
url = "2"
